--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,20 @@
   color: white;
 }
 
+/* .file-upload-input {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  opacity: 0;
+  cursor: pointer;
+  background-color: black;
+   } */
+
+
+
 .App-link {
   color: #61dafb;
 }
